[gd_scene load_steps=5 format=3 uid="uid://5omwyibg5x1c"]

[ext_resource type="Texture2D" uid="uid://ydtarorbvogp" path="res://Assets/Art/Cards/Card_Bat.png" id="1_ocfwx"]
[ext_resource type="Script" path="res://Scripts/cabinet_card.gd" id="1_wcb8b"]
[ext_resource type="Texture2D" uid="uid://br783mbyincco" path="res://Assets/Art/Icons/Set_Bow.png" id="2_8ysl5"]
[ext_resource type="FontFile" uid="uid://ktnlyqclx0vo" path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="3_8fu3l"]

[node name="CabinetCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcb8b")
metadata/_edit_group_ = true

[node name="Card" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_ocfwx")

[node name="SetIcon" type="Sprite2D" parent="."]
position = Vector2(128, 211)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_8ysl5")

[node name="CardName" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 32.0
offset_right = 204.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8fu3l")
theme_override_font_sizes/font_size = 12
text = "Bat"
vertical_alignment = 1

[connection signal="pressed" from="Card" to="." method="_on_card_pressed"]
